# SFML_Tutorial

./: .gitignore  AssetManager.cpp  CMakeLists.txt  Game.cpp  InputManager.cpp  SplashState.cpp  StateMachine.cpp  main.cpp
header/: Definitions.hpp
include/: Definitions.hpp  GameState.hpp
src/: AssetManager.cpp  Game.cpp  GameOverState.cpp  GameState.cpp  InputManager.cpp  MainMenuState.cpp  PauseState.cpp  SplashState.cpp  StateMachine.cpp  main.cpp
